--- a/src/pages/privacy/privacy.scss
+++ b/src/pages/privacy/privacy.scss
@@ -2,7 +2,7 @@
     padding: 2rem 4rem 4rem 4rem;
 }
 
-@media screen and (max-width: (480px)) {
+@media screen and (max-width: 480px) {
     .privacy {
         padding: 2rem 10px;
     }
