--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -29,6 +29,7 @@
                     left: 30%;
                     margin-top: 10px;
                     border-radius: 10px;
+                    z-index: 1000;
 
                     li {
                       color: #000 !important;
